--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,8 @@
 
 <canvas width="800" height="600"></canvas>
 <div>
-  <button>Prev</button>
-  <button>Next</button>
+  Previous/Next flag: <kbd>A</kbd>/<kbd>D</kbd>
+  Decrease/Increase circle: <kbd>Q</kbd>/<kbd>E</kbd>
 </div>
 
 <script src="app.js" type="module"></script>
